--- a/frontend/src/components/DocumentManagementPanel.css
+++ b/frontend/src/components/DocumentManagementPanel.css
@@ -1,10 +1,10 @@
 .document-management-panel {
-  width: 350px;
+  width: 100%;
   background-color: #252526;
   border-right: 1px solid #3e3e3e;
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: 100%;
   overflow: hidden;
 }
 
